deployments/base/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: martian-imperial-year-table
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: martian-imperial-year-table
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      annotations:
        mackerel.io/roles: martian-imperial-year-table:web
    spec:
      containers:
        - name: web
          image: gcr.io/c4se-197915/martian_imperial_year_table:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ops/heartbeat
              port: 5000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
        - name: mackerel-container-agent
          image: mackerel/mackerel-container-agent:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: 128Mi
