deployments/base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: martian-imperial-year-table
  labels: {}
spec:
  type: LoadBalancer
  ports:
    - name: martian-imperial-year-table
      port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: martian-imperial-year-table
