deployments/base/ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: martian-imperial-year-table
  annotations:
    cert-manager.io/issuer: letsencrypt
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules: []
  tls: []
